Campaign feeds on homepage

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #121212 !important;
+}
+
 .ql-container {
   border-bottom-left-radius: 0.5em;
   border-bottom-right-radius: 0.5em;
